--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.20.1",
     "g": "^2.0.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "n": "^9.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
